--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -6,7 +6,7 @@
 </style>
 <div class="image-gallery">
     {% for file in site.static_files %}
-        {% if file.path contains include.folder and file.extname == '.jpg' %}
+        {% if file.path contains include.folder and file.extname == '.jpg' or file.extname == '.png' %}
             {% assign title = file.path | split: '/' | last | replace: file.extname, '' %}
             <div class="box">
                 <a href="{{ file.path | relative_url }}" title="{{ title }}">
