--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -5,7 +5,6 @@
     searchInput: document.getElementById('search-input'),
     resultsContainer: document.getElementById('results-container'),
     json: '/search.json',
-    limit: 10,
-    fuzzy: true
+    limit: 10
   })
 </script>
