--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
     </style>
 </head>
 <body>
+    {% include carousel.html %}
     {% include navbar.html %}
     <div class="container">
         {% include search.html %}
