--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,17 +1,21 @@
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel"
-     style="max-height: 400px; overflow: hidden;">
+     style="max-height: 450px; overflow: hidden;">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="/assets/images/carousel/c01.jpg" class="d-block w-100" alt="..."
-                 style="object-fit: cover; height: 400px;">
+            <img src="/assets/images/carousel/i01.jpg" class="d-block w-100" alt="..."
+                 style="object-fit: cover;">
         </div>
         <div class="carousel-item">
-            <img src="/assets/images/carousel/c02.jpg" class="d-block w-100" alt="..."
-                 style="object-fit: cover; height: 400px;">
+            <img src="/assets/images/carousel/i02.jpg" class="d-block w-100" alt="..."
+                 style="object-fit: cover;">
         </div>
         <div class="carousel-item">
-            <img src="/assets/images/carousel/c03.jpg" class="d-block w-100" alt="..."
-                 style="object-fit: cover; height: 400px;">
+            <img src="/assets/images/carousel/i03.jpg" class="d-block w-100" alt="..."
+                 style="object-fit: cover;">
+        </div>
+        <div class="carousel-item">
+            <img src="/assets/images/carousel/i04.jpg" class="d-block w-100" alt="..."
+                 style="object-fit: cover;">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
