--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/klub/">Klub</a>
+                    <a class="nav-link" aria-current="page" href="/">SP2ZIE</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/projekty/">Projekty</a>
