--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,6 +11,9 @@
                     <a class="nav-link" aria-current="page" href="/">SP2ZIE</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="https://www.facebook.com/p/SP2ZIE-Morski-Klub-%C5%81%C4%85czno%C5%9Bci-Szkuner-100063558938156/?locale=pl_PL">Aktualności</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/projekty/">Projekty</a>
                 </li>
                 <li class="nav-item">
