--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,10 @@
 <footer class="bg-light text-dark mt-5 py-4">
     <div class="container text-center">
         <p class="mb-2 d-inline">&copy; 2026 {{ site.title }}. Wszelkie prawa zastrzeżone.</p>
+        <p class="mb-0 mt-2">
+            <a class="link-dark text-decoration-none" href="https://www.facebook.com/p/SP2ZIE-Morski-Klub-%C5%81%C4%85czno%C5%9Bci-Szkuner-100063558938156/?locale=pl_PL">
+                <i class="bi bi-facebook" aria-hidden="true"></i> Facebook
+            </a>
+        </p>
     </div>
 </footer>
