Extrace facebook_url

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="container text-center">
         <p class="mb-2 d-inline">&copy; 2026 {{ site.title }}. Wszelkie prawa zastrzeżone.</p>
         <p class="mb-0 mt-2">
-            <a class="link-dark text-decoration-none" href="https://www.facebook.com/p/SP2ZIE-Morski-Klub-%C5%81%C4%85czno%C5%9Bci-Szkuner-100063558938156/?locale=pl_PL">
+            <a class="link-dark text-decoration-none" href="{{ site.facebook_url }}">
                 <i class="bi bi-facebook" aria-hidden="true"></i> Facebook
             </a>
         </p>
