--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,7 +10,7 @@
                     <a class="nav-link" aria-current="page" href="/">SP2ZIE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="https://www.facebook.com/p/SP2ZIE-Morski-Klub-%C5%81%C4%85czno%C5%9Bci-Szkuner-100063558938156/?locale=pl_PL">
+                    <a class="nav-link" aria-current="page" href="{{ site.facebook_url }}">
                         Aktualności <i class="bi bi-facebook" aria-hidden="true"></i>
                     </a>
                 </li>
