--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -113,6 +113,15 @@
             </a>
         </div>
         <div class="carousel-item">
+            <a href="/radio/" class="d-block position-relative">
+                <img src="/assets/images/carousel/c02.jpg" class="d-block w-100" alt="Radiostacja">
+                <div class="carousel-caption d-none d-md-block" style="background: rgba(0,0,0,0.6); border-radius: 8px; padding: 15px;">
+                    <h5>Testy radiotelefonów</h5>
+                    <p>Kliknij, aby zobaczyć więcej</p>
+                </div>
+            </a>
+        </div>
+        <div class="carousel-item">
             <a href="/projekty/ariss/" class="d-block position-relative">
                 <img src="/assets/images/carousel/i01.jpg" class="d-block w-100" alt="ARISS">
                 <div class="carousel-caption d-none d-md-block" style="background: rgba(0,0,0,0.6); border-radius: 8px; padding: 15px;">
